syntax = "proto3";
package cosmosmessenger.cosmosmessenger;

option go_package = "cosmos-messenger/x/cosmosmessenger/types";

message EncryptKey {
  string PubKey = 1;
}
