syntax = "proto3";
package cosmosmessenger.cosmosmessenger;

option go_package = "cosmos-messenger/x/cosmosmessenger/types";

message Message {
  string senderAddress = 1;
  string receiverAddress = 2;
  string body = 3; 
  string id = 4;
}
